Modifications on the text added. Results for analysis gathered.

--- a/article/00-titlepage.tex
+++ b/article/00-titlepage.tex
@@ -1,16 +1,23 @@
 
 \maketitle
 
-\noindent\textbf{Abstract.} We propose a variation of the self organizing map
-algorithm by considering the random placement of neurons on a two-dimensional
-manifold, following a blue noise distribution from which various topologies can
-be derived. These topologies possess random (but controllable) discontinuities
-that allow for a more flexible self-organization, especially with
-high-dimensional data. The model is illustrated on several classical examples
-and its properties are more finely studied. Finally, we explain how this model
-can be made resilient to neural gain or loss by reorganizing the neural sheet
-using centroidal Voronoi tesselation.\\
+\noindent\textbf{Abstract.} Self-organizing maps usually rely on a
+predetermined topology of the neural space (the map), which is either
+a rectangular or a hexagonal Cartesian grid. When the intrinsic dimension of 
+the input space is much higher than the allowed dimension of the neural space,
+then the self-organizing map can be ill-formed. To overcome this problem in 
+high dimensional input spaces we propose a variation of the self organizing map
+algorithm, where we consider random placement of neurons on a high-dimensional
+manifold. The positions of the neural units are drawn from a blue noise 
+distribution thus various topologies can be derived. These topologies possess 
+random (but controllable) discontinuities that allow for a more flexible s
+elf-organization, especially with high-dimensional data. The proposed algorithm
+has been tested on one-, two- and \gid[X]-dimensions tasks as well as on 
+reorganization problems, where we either removed or added neurons to the map.
+\gid{TOOLS WE USED TO ASSESS THE QUALITY AND PERFORMANCE}.\\
 
-\noindent\textbf{Keywords.} Self Organization, Topology, Vector Quantization
+
+\noindent\textbf{Keywords.} Self Organization, Neural Networks, 
+Vector Quantization, Voronoi Tesselation, Neural Map Topology.
 
 \bigskip
