--- a/article/03-results.tex
+++ b/article/03-results.tex
@@ -29,7 +29,7 @@ NumPy \citep{Walt:2011}. Sources are available at
 
 \subsection{Low-dimensional data}
 
-\subsubsection{One-dimensional data}
+\subsubsection*{One-dimensional data}
 
 \begin{figure}
   \includegraphics[width=\columnwidth]{figures/vsom-scalar-1.pdf}
@@ -115,3 +115,7 @@ NumPy \citep{Walt:2011}. Sources are available at
 
 
 \subsection{Reorganization}
+
+\subsubsection*{Ablation}
+
+\subsubsection*{Addition}
