--- a/article/04-discussion.tex
+++ b/article/04-discussion.tex
@@ -7,8 +7,12 @@ a more biologically plausible self-organization.
 
 
 
-
-
+\section*{Abbreviations}
+\begin{description}
+    \item[\bf SOM] Self-organizing Map
+    \item[\bf BMU] Best matching unit
+    \item[\bf DSOM] Dynamic Self-organizing Map
+\end{description}
 
 
 
