--- a/article/article.tex
+++ b/article/article.tex
@@ -10,6 +10,7 @@
 \usepackage[backend=biber, style=authoryear, doi=false, url=false,
             giveninits=true, natbib=true]{biblatex}
 \usepackage{fullpage}
+\usepackage{algorithm,algpseudocode}
 \addbibresource{bibliography.bib}
 \usepackage{lineno}
 
